.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:33:01 **** Build of configuration Debug for project testc ****
make all 
Building file: ../cfile.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"cfile.d" -MT"cfile.o" -o "cfile.o" "../cfile.cpp"
../cfile.cpp: In function ‘int main()’:
../cfile.cpp:11:2: error: ‘cout’ was not declared in this scope
  cout<<"aaa"<<endl;
  ^
../cfile.cpp:11:15: error: ‘endl’ was not declared in this scope
  cout<<"aaa"<<endl;
               ^
make: *** [cfile.o] 错误 1
12:33:18 **** Incremental Build of configuration Debug for project testc ****
make all 
Building file: ../cfile.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"cfile.d" -MT"cfile.o" -o "cfile.o" "../cfile.cpp"
Finished building: ../cfile.cpp
 
Building target: testc
Invoking: GCC C++ Linker
g++  -o "testc"  ./cfile.o   
Finished building target: testc
 
12:34:27 **** Incremental Build of configuration Debug for project testc ****
make all 
Building file: ../cfile.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"cfile.d" -MT"cfile.o" -o "cfile.o" "../cfile.cpp"
Finished building: ../cfile.cpp
 
Building target: testc
Invoking: GCC C++ Linker
g++  -o "testc"  ./cfile.o   
Finished building target: testc
 
17:24:38 **** Build of configuration Debug for project GaussianElimination ****
make all 
Building file: ../GaussianElimination.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"GaussianElimination.d" -MT"GaussianElimination.o" -o "GaussianElimination.o" "../GaussianElimination.cpp"
Finished building: ../GaussianElimination.cpp
 
Building target: GaussianElimination
Invoking: GCC C++ Linker
g++  -o "GaussianElimination"  ./GaussianElimination.o   
Finished building target: GaussianElimination
 
17:30:55 **** Incremental Build of configuration Debug for project GaussianElimination ****
make all 
Building file: ../GaussianElimination.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"GaussianElimination.d" -MT"GaussianElimination.o" -o "GaussianElimination.o" "../GaussianElimination.cpp"
Finished building: ../GaussianElimination.cpp
 
Building target: GaussianElimination
Invoking: GCC C++ Linker
g++  -o "GaussianElimination"  ./GaussianElimination.o   
Finished building target: GaussianElimination
 
17:32:55 **** Incremental Build of configuration Debug for project GaussianElimination ****
make all 
Building file: ../GaussianElimination.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"GaussianElimination.d" -MT"GaussianElimination.o" -o "GaussianElimination.o" "../GaussianElimination.cpp"
Finished building: ../GaussianElimination.cpp
 
Building target: GaussianElimination
Invoking: GCC C++ Linker
g++  -o "GaussianElimination"  ./GaussianElimination.o   
Finished building target: GaussianElimination
 
18:38:03 **** Incremental Build of configuration Debug for project GaussianElimination ****
make all 
Building file: ../GaussianElimination.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"GaussianElimination.d" -MT"GaussianElimination.o" -o "GaussianElimination.o" "../GaussianElimination.cpp"
../GaussianElimination.cpp: In function ‘int main()’:
../GaussianElimination.cpp:66:28: warning: format ‘%d’ expects argument of type ‘int*’, but argument 2 has type ‘double*’ [-Wformat=]
    scanf("%d", &index[i][j]);
                            ^
../GaussianElimination.cpp:74:27: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘double’ [-Wformat=]
   printf("%d\t", result[i]);
                           ^
Finished building: ../GaussianElimination.cpp
 
Building target: GaussianElimination
Invoking: GCC C++ Linker
g++  -o "GaussianElimination"  ./GaussianElimination.o   
Finished building target: GaussianElimination
 
18:39:54 **** Incremental Build of configuration Debug for project GaussianElimination ****
make all 
Building file: ../GaussianElimination.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"GaussianElimination.d" -MT"GaussianElimination.o" -o "GaussianElimination.o" "../GaussianElimination.cpp"
Finished building: ../GaussianElimination.cpp
 
Building target: GaussianElimination
Invoking: GCC C++ Linker
g++  -o "GaussianElimination"  ./GaussianElimination.o   
Finished building target: GaussianElimination
 
